# daq-queuing-service

./: .copier-answers.yml  .gitignore  Dockerfile  README.md  catalog-info.yaml  pyproject.toml
.github/: CONTRIBUTING.md
docs/: _api.rst  conf.py  reference.md
docs/how-to/: run-container.md
docs/tutorials/: installation.md
src/daq_queuing_service/: __main__.py  blueapi_adapter.py  main.py  queue.py  task.py
src/daq_queuing_service/api/: api.py
src/daq_queuing_service/queue/: queue.py
src/daq_queuing_service/worker/: worker.py
tests/: test_cli.py  test_queue.py
